I09-70 Add buttons to run the sequence file or copy the command to the clipboard
This adds the buttons to run the sequence now or copy the command to run
it to the clipboard for inspection or use in scripts. It enables extra
detectors to be configured using the extraDetectors object in the
Jython namespace, which is just a string appended to the end of the
analyserscan command.

Some of the code for this was already implemented so was re-enabled

Change-Id: I8bd39d04c7dc791e2d95c87c42ed9f07e06a496f

--- a/org.opengda.detector.electronanalyser.client/plugin.xml
+++ b/org.opengda.detector.electronanalyser.client/plugin.xml
@@ -105,6 +105,11 @@
             id="org.opengda.detector.electronanalyser.client.plotlayoutdopdown"
             name="Drop">
       </command>
+      <command
+            description="Command to clipboard"
+            id="org.opengda.detector.electronanalyser.client.commandToClipboard"
+            name="Command to clipboard">
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -145,13 +150,20 @@
                name="org.opengda.detector.electronanalyser.client.separator1"
                visible="true">
          </separator>
-         <!--command
+         <command
                commandId="org.opengda.detector.electronanalyser.client.startcollection"
                icon="icons/run_exc.gif"
                label="Start"
                style="push"
-               tooltip="Start collecting active regions in this sequence">
-         </command-->
+               tooltip="Save sequence and start it running">
+         </command>
+         <command
+               commandId="org.opengda.detector.electronanalyser.client.commandToClipboard"
+               icon="icons/runToClipboard.png"
+               label="Command to clipboard"
+               style="push"
+               tooltip="Save the sequence and copy the command to the clipboard">
+         </command>
          <!--command
                commandId="org.opengda.detector.electronanalyser.client.stopcollection"
                icon="icons/stop.gif"
@@ -159,18 +171,25 @@
                label="Stop"
                style="push"
                tooltip="Stop current data collection">
-         </command-->
+         </command> -->
       </menuContribution>
       <menuContribution
             allPopups="false"
             locationURI="toolbar:org.opengda.detector.electronanalyser.client.sequenceeditor">
-         <!--command
+         <command
                commandId="org.opengda.detector.electronanalyser.client.startcollection"
                icon="icons/run_exc.gif"
                label="Start"
                style="push"
-               tooltip="Start collecting active regions in this sequence">
-         </command-->
+               tooltip="Save sequence and start it running">
+         </command>
+         <command
+               commandId="org.opengda.detector.electronanalyser.client.commandToClipboard"
+               icon="icons/runToClipboard.png"
+               label="Command to clipboard"
+               style="push"
+               tooltip="Save the sequence and copy the command to the clipboard">
+         </command>
          <!--command
                commandId="org.opengda.detector.electronanalyser.client.stopcollection"
                icon="icons/stop.gif"
@@ -342,6 +361,10 @@
       <handler
             class="org.opengda.detector.electronanalyser.client.actions.StopCollectionAction"
             commandId="org.opengda.detector.electronanalyser.client.stopcollection">
+      </handler>
+      <handler
+            class="org.opengda.detector.electronanalyser.client.actions.CommandToClipboardAction"
+            commandId="org.opengda.detector.electronanalyser.client.commandToClipboard">
       </handler>
    </extension>
    <extension
