--- a/uk.ac.gda.core/build.properties
+++ b/uk.ac.gda.core/build.properties
@@ -6,7 +6,8 @@ bin.includes = META-INF/,\
                .,\
                icons/,\
                OSGI-INF/,\
-               plugin.xml
+               plugin.xml,\
+               scripts/
 javacDefaultEncoding.. = UTF-8
 jre.compilation.profile = JavaSE-1.8
 javacProjectSettings = true
