Ensure scripts directory is in the build and update extension def
Change-Id: I91527742f84b1d7ca2ece51de88ea53022ba7236

--- a/uk.ac.gda.epics/build.properties
+++ b/uk.ac.gda.epics/build.properties
@@ -5,7 +5,8 @@ bin.includes = META-INF/,\
                jars/jca-2.3.6.jar,\
                jars/epics-5.3.14.jar,\
                jars/caj-1.1.14.jar,\
-               plugin.xml
+               plugin.xml,\
+               scripts/
 javacDefaultEncoding.. = UTF-8
 javacProjectSettings = true
 jre.compilation.profile = JavaSE-1.7
