--- a/uk.ac.gda.epics/plugin.xml
+++ b/uk.ac.gda.epics/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="uk.ac.diamond.daq.jython.api.scriptLocations">
       <location
-            folder="gda-epics.git/uk.ac.gda.epics/scripts">
+            folder="uk.ac.gda.epics/scripts">
       </location>
    </extension>
 
