--- a/uk.ac.gda.arpes.server/build.properties
+++ b/uk.ac.gda.arpes.server/build.properties
@@ -2,6 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               scripts/
 jre.compilation.profile = JavaSE-1.8
 javacProjectSettings = true
