--- a/uk.ac.gda.arpes.server/plugin.xml
+++ b/uk.ac.gda.arpes.server/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="uk.ac.diamond.daq.jython.api.scriptLocations">
       <location
-            folder="gda-pes.git/uk.ac.gda.arpes.server/scripts">
+            folder="uk.ac.gda.arpes.server/scripts">
       </location>
    </extension>
 
