Define scriptLocation via extension point.
Add the extension point definition for the scripts folder for bimorph
scripts.

Change-Id: I3c8b6cd28b7d25e6c89d1c30015048dbc00c4196

--- a/uk.ac.gda.bimorph/plugin.xml
+++ b/uk.ac.gda.bimorph/plugin.xml
@@ -29,4 +29,10 @@
       </bean>
       
   </extension>
+   <extension
+         point="uk.ac.diamond.daq.jython.api.scriptLocations">
+      <location
+            folder="uk.ac.gda.bimorph/scripts">
+      </location>
+   </extension>
 </plugin>
