Use extension point mechanism to reference script location
Ensure the bundle is unpacked on export and add the extension point
definition and required dependency.

Change-Id: I8863ff50e6d17f451efd05469c22d9f6749fbf10

--- a/uk.ac.gda.devices.excalibur/build.properties
+++ b/uk.ac.gda.devices.excalibur/build.properties
@@ -4,7 +4,8 @@ bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               scripts/
 jars.compile.order = .
 javacDefaultEncoding.. = UTF-8
 javacProjectSettings = true
