--- a/uk.ac.gda.devices.excalibur/plugin.xml
+++ b/uk.ac.gda.devices.excalibur/plugin.xml
@@ -16,5 +16,11 @@
             class="uk.ac.gda.excalibur.config.model.ExcaliburConfigPackage"
             genModel="model/excaliburConfig.genmodel"/>
    </extension>
+   <extension
+         point="uk.ac.diamond.daq.jython.api.scriptLocations">
+      <location
+            folder="uk.ac.gda.devices.excalibur/scripts">
+      </location>
+   </extension>
 
 </plugin>
