--- a/uk.ac.diamond.daq.client.microfocus.scan/build.properties
+++ b/uk.ac.diamond.daq.client.microfocus.scan/build.properties
@@ -1,7 +1,9 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               scripts/,\
+               plugin.xml
 javacDefaultEncoding.. = UTF-8
 javacProjectSettings = true
 jre.compilation.profile = JavaSE-1.7
