Include Diffcalc script location in standard locations
Reference the diffcalc scripts folder via the scriptLocations extension
point.

Change-Id: I613d84e8407dce773e30833f21fea252e7ebbd6c

--- a/uk.ac.gda.core/plugin.xml
+++ b/uk.ac.gda.core/plugin.xml
@@ -472,6 +472,9 @@
       <location
             folder="uk.ac.diamond.scisoft.python/src">
       </location>
+      <location
+            folder="diffcalc.git">
+      </location>
    </extension>
 
    <extension
