Add schema folder to build so default schema can be retrieved
Should have been part of change 4893 but
got left out. Needed for vmxi to start up properly in current version of
master.

Change-Id: I3bf43588f07164f595777c1605c25fb7aca78412

--- a/uk.ac.gda.epics/build.properties
+++ b/uk.ac.gda.epics/build.properties
@@ -6,7 +6,8 @@ bin.includes = META-INF/,\
                jars/epics-5.3.14.jar,\
                jars/caj-1.1.14.jar,\
                plugin.xml,\
-               scripts/
+               scripts/,\
+               schema/
 javacDefaultEncoding.. = UTF-8
 javacProjectSettings = true
 jre.compilation.profile = JavaSE-1.7
