GDA-4241 Use the pysrc in the tp's pydev rather than the copy in core
Add target platform's pysrc/ from org.python.pydev to PYTHONPATH to
support auto-completion without the need to have a copy of pysrc in the
core scripts

Change-Id: I89ae233e13cbcbce7c49022a62cc5f449e8a0032

--- a/uk.ac.gda.core/plugin.xml
+++ b/uk.ac.gda.core/plugin.xml
@@ -478,6 +478,9 @@
       <location
             folder="org.eclipse.scanning.command/scripts">
       </location>
+      <location
+            folder="org.python.pydev/pysrc">
+      </location>
    </extension>
 
    <extension
