Split uk.ac.gda.bimorph bundle into into scripts and UI
bimorph.ui topic for updating client features to uk.ac.gda.bimorph.ui

Change-Id: Idff870ead47215c03c2d10a6e64b89deab125993

--- a/uk.ac.gda.bimorph.ui/.project
+++ b/uk.ac.gda.bimorph.ui/.project
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>uk.ac.gda.bimorph</name>
+	<name>uk.ac.gda.bimorph.ui</name>
 	<comment></comment>
 	<projects>
-		<project>uk.ac.gda.core</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>org.python.pydev.PyDevBuilder</name>
+			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -24,6 +23,6 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.pde.PluginNature</nature>
-		<nature>org.python.pydev.pythonNature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
 </projectDescription>
