Fix qualified name of extension point class that moved package
Change-Id: I9a85f8a40cadef0086c760d19bff1f60f65e36e3

--- a/uk.ac.gda.bimorph.ui/plugin.xml
+++ b/uk.ac.gda.bimorph.ui/plugin.xml
@@ -24,7 +24,7 @@
   </extension>
    <extension point="uk.ac.common.beans.factory">
       <bean
-            class="uk.ac.gda.bimorph.BimorphParameters"
+            class="uk.ac.gda.bimorph.ui.BimorphParameters"
             describer="uk.ac.gda.bimorph.ui.BimorphParametersDescriber">
       </bean>
       
