Accept name attribute in scriptLocation extension point
Allow alternative to Std# for script project names in GDA project explorer

Change-Id: If8c5cd292a1b951c8528e1d7191528f4aedf00c0

--- a/uk.ac.gda.core/plugin.xml
+++ b/uk.ac.gda.core/plugin.xml
@@ -467,16 +467,20 @@
    <extension
          point="uk.ac.diamond.daq.jython.api.scriptLocations">
       <location
-            folder="uk.ac.gda.core/scripts">
+            folder="uk.ac.gda.core/scripts"
+            name="Scripts: Core">
       </location>
       <location
-            folder="uk.ac.diamond.scisoft.python/src">
+            folder="uk.ac.diamond.scisoft.python/src"
+            name="Scripts: Scisoft">
       </location>
       <location
-            folder="diffcalc.git">
+            folder="diffcalc.git"
+            name="Scripts: Diffcalc">
       </location>
       <location
-            folder="org.eclipse.scanning.command/scripts">
+            folder="org.eclipse.scanning.command/scripts"
+            name="Scripts: Scanning">
       </location>
    </extension>
 
