Add script project name
Change-Id: I4b08a6b35c76a0e1cbd91fdfcad637d58efee98c

--- a/uk.ac.gda.arpes.server/plugin.xml
+++ b/uk.ac.gda.arpes.server/plugin.xml
@@ -4,6 +4,7 @@
    <extension
          point="uk.ac.diamond.daq.jython.api.scriptLocations">
       <location
+            name="Scripts: ARPES"
             folder="uk.ac.gda.arpes.server/scripts">
       </location>
    </extension>
