Add script project name
Change-Id: Iac727b09b9ddb3fba9965546678e9629606b94fa

--- a/uk.ac.gda.devices.excalibur/plugin.xml
+++ b/uk.ac.gda.devices.excalibur/plugin.xml
@@ -19,7 +19,8 @@
    <extension
          point="uk.ac.diamond.daq.jython.api.scriptLocations">
       <location
-            folder="uk.ac.gda.devices.excalibur/scripts">
+            folder="uk.ac.gda.devices.excalibur/scripts"
+            name="Scripts: Excalibur">
       </location>
    </extension>
 
