--- a/uk.ac.diamond.daq.client.microfocus.scan/plugin.xml
+++ b/uk.ac.diamond.daq.client.microfocus.scan/plugin.xml
@@ -4,7 +4,8 @@
    <extension
          point="uk.ac.diamond.daq.jython.api.scriptLocations">
       <location
-            folder="uk.ac.diamond.daq.client.microfocus.scan/scripts">
+            folder="uk.ac.diamond.daq.client.microfocus.scan/scripts"
+            name="Scripts: Microfocus">
       </location>
    </extension>
 
