--- a/uk.ac.gda.server.exafs/plugin.xml
+++ b/uk.ac.gda.server.exafs/plugin.xml
@@ -4,7 +4,8 @@
    <extension
          point="uk.ac.diamond.daq.jython.api.scriptLocations">
       <location
-            folder="uk.ac.gda.server.exafs/scripts">
+            folder="uk.ac.gda.server.exafs/scripts"
+            name="Scripts: EXAFS">
       </location>
    </extension>
 
