Add script project name
Change-Id: Ia33d18ccaa68b1d995d6ce597a8d6e8c6123a883

--- a/uk.ac.gda.epics/plugin.xml
+++ b/uk.ac.gda.epics/plugin.xml
@@ -4,7 +4,8 @@
    <extension
          point="uk.ac.diamond.daq.jython.api.scriptLocations">
       <location
-            folder="uk.ac.gda.epics/scripts">
+            folder="uk.ac.gda.epics/scripts"
+            name="Scripts: EPICS">
       </location>
    </extension>
 
