Add script project name
Change-Id: I0483a06c9714c6cea029e7caef309f9a1eaf537f

--- a/uk.ac.gda.bimorph/plugin.xml
+++ b/uk.ac.gda.bimorph/plugin.xml
@@ -4,7 +4,8 @@
    <extension
          point="uk.ac.diamond.daq.jython.api.scriptLocations">
       <location
-            folder="uk.ac.gda.bimorph/scripts">
+            folder="uk.ac.gda.bimorph/scripts"
+            name="Scripts: Bimorph">
       </location>
    </extension>
 </plugin>
