[I18-95] fix marshalling for ExperimentCommandBeans
Change-Id: I36a1b69edd6e0435eed193a1e04305a54da460e5

--- a/uk.ac.gda.core/plugin.xml
+++ b/uk.ac.gda.core/plugin.xml
@@ -496,4 +496,13 @@
       </marshaller>
    </extension>
 
+   <extension
+       point="org.eclipse.dawnsci.analysis.api.classregistry">
+      <classregistry
+            class="uk.ac.gda.core.classregistry.GDACoreClassRegistry"
+            id="uk.ac.gda.core.classregistry.GDACoreClassRegistry">
+      </classregistry>
+   </extension>
+
+
 </plugin>
