--- a/uk.ac.gda.core/plugin.xml
+++ b/uk.ac.gda.core/plugin.xml
@@ -472,7 +472,7 @@
       </location>
       <location
             folder="uk.ac.diamond.scisoft.python/src"
-            name="Scripts: Scisoft">
+            name="Scripts: ScisoftPy">
       </location>
       <location
             folder="diffcalc.git"
