--- a/uk.ac.diamond.daq.detectors.addetector/build.properties
+++ b/uk.ac.diamond.daq.detectors.addetector/build.properties
@@ -5,4 +5,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               icons/
+               icons/,\
+               OSGI-INF/
+               
