I15_1-201 Rename LiveMjpegPlot -> LiveStreamView
Also rename package uk.ac.gda.client.liveplot.mjpeg -> uk.ac.gda.client.live.stream.view

This is to reflect the fact the view can now handle stream of EPICS
array data as well as MJPEG. Update p45 config as an example of using
this feature.

Change-Id: I063e13bf832a92c2bd663d7de9065c2f6f3c86a3

--- a/uk.ac.gda.client/plugin.xml
+++ b/uk.ac.gda.client/plugin.xml
@@ -163,10 +163,10 @@
       </view>
       <view
             allowMultiple="true"
-            class="uk.ac.gda.client.liveplot.mjpeg.LiveMjpegPlot"
+            class="uk.ac.gda.client.live.stream.view.LiveStreamView"
             icon="icons/media-player-phone-horizontal.png"
-            id="uk.ac.gda.client.liveplot.mjpeg.LiveMJPEGView"
-            name="Live MJPEG Plot"
+            id="uk.ac.gda.client.live.stream.view.LiveStreamView"
+            name="Live Stream"
             restorable="true">
       </view>
       <view
