Add common translator property to core config
It appears that I07 and B16 are the only beamlines to use non-standard
translator (MMTranslator).

terminalOutputDir is set to the same value in every config.

jythonTerminal view settings are not specific to DLS so should be core

Change-Id: Ica1f17dbfb1cc55da8959db287627085e569152b

--- a/core-config/properties/core_java.properties
+++ b/core-config/properties/core_java.properties
@@ -22,3 +22,8 @@ gda.accesscontrol.useBatonControl = true
 gda.accesscontrol.defaultAuthorisationLevel = 1
 gda.accesscontrol.defaultStaffAuthorisationLevel=3
 gda.accesscontrol.firstClientTakesBaton = true
+
+# Jython properties
+gda.jython.translator.class = GeneralTranslator
+gda.jython.terminalOutputDir = ${gda.logs.dir}
+gda.jython.jythonTerminal.textFieldCharactersCap = 1000000
