DAQ-190 Move SampleMetadataView into uk.ac.gda.client
This also remove the i05 specific classes which were not used any way
for monitoring swept progress. This allows the view to be generic

Change-Id: Ia00521265bc01e535002b963993349f35f6846ef

--- a/uk.ac.gda.client/plugin.xml
+++ b/uk.ac.gda.client/plugin.xml
@@ -177,6 +177,14 @@
             name="Live Controls"
             restorable="true">
       </view>
+      <view
+               category="uk.ac.gda.client.general.category"
+               class="uk.ac.gda.rcp.views.sample.SampleMetadataView"
+               icon="icons/sample.gif"
+               id="uk.ac.gda.arpes.ui.view.samplemetadata"
+               name="Sample and Scan Information"
+               restorable="true">
+         </view>
    </extension>
    
  
