DAQ-190 Change the generic dashboard id
This changes the view id of the generic dashboard from
uk.ac.gda.exafs.ui.dashboardView -> uk.ac.gda.rcp.views.dashboardView
As its not exafs specific this makes more sense and it simplifies the
removal of the i05 version.

Change-Id: Icfc9208f3911b460b0c65d29411e36bf0bc96e1e

--- a/uk.ac.gda.client/plugin.xml
+++ b/uk.ac.gda.client/plugin.xml
@@ -114,7 +114,7 @@
             category="uk.ac.gda.client.general.category"
             class="gda.rcp.views.dashboard.DashboardView"
             icon="icons/layout_content.png"
-            id="uk.ac.gda.exafs.ui.dashboardView"
+            id="uk.ac.gda.rcp.views.dashboardView"
             name="Dashboard"
             restorable="true">
       </view>
@@ -713,7 +713,7 @@
     </command>
  </menuContribution>
  <menuContribution
-       locationURI="toolbar:uk.ac.gda.exafs.ui.dashboardView">
+       locationURI="toolbar:uk.ac.gda.rcp.views.dashboardView">
     <command
           commandId="uk.ac.gda.client.RefreshDashCommand"
           icon="icons/page_refresh.png"
@@ -755,7 +755,7 @@
     </command>
  </menuContribution>
  <menuContribution
-       locationURI="popup:uk.ac.gda.exafs.ui.dashboardView">
+       locationURI="popup:uk.ac.gda.rcp.views.dashboardView">
     <command
           commandId="uk.ac.gda.client.AddScannableCommand"
           icon="icons/monitor_add.png"
@@ -823,7 +823,7 @@
     </command>
  </menuContribution>
  <menuContribution
-       locationURI="menu:uk.ac.gda.exafs.ui.dashboardView">
+       locationURI="menu:uk.ac.gda.rcp.views.dashboardView">
     <command
           commandId="uk.ac.gda.client.ResetServerObjectsCommand"
           label="Reset"
