[DAQ-510] added class registry for mapping UI
Change-Id: I6eb9354620a6fee94aa1a891a92fd3b64f191dd7

--- a/uk.ac.diamond.daq.mapping/plugin.xml
+++ b/uk.ac.diamond.daq.mapping/plugin.xml
@@ -2,5 +2,12 @@
 <?eclipse version="3.4"?>
 <plugin>
 
+   <extension
+      point="org.eclipse.dawnsci.analysis.api.classregistry">
+      <classregistry
+           class="uk.ac.diamond.daq.mapping.impl.MappingUIClassRegistry"
+           id="uk.ac.diamond.daq.mapping.impl.MappingUIClassRegistry">
+      </classregistry>
+   </extension>
 
 </plugin>
