DAQ-537  fix the mis-spelled scisoftpy package.
Change-Id: Ia2136c2c62ed7b8c72a59cd9ed8cdef6a298eff6

--- a/uk.ac.gda.core/plugin.xml
+++ b/uk.ac.gda.core/plugin.xml
@@ -456,11 +456,11 @@
    <extension
          point="uk.ac.diamond.daq.jython.api.visiblePackages">
       <bundle
-            name="uk.ac.gda.diamond.scisoft.python">
+            name="uk.ac.diamond.scisoft.python">
       </bundle>
          <packages>
             <package
-               name="uk.ac.gda.diamond.scisoft.python">
+               name="uk.ac.diamond.scisoft.python">
             </package>
       </packages>
    </extension>
