[DAQ-409] refactor results handlers
The two default behaviours have been refactored out into their own
result handlers. Of these, the handler for ScanBean is now added using
the extension point. The handler that opens the run directory is
created programatically at the end so as to always be the last (default)
handler. The handlers are also now cached.

Signed-off-by: Matthew Dickie <matthew.dickie@diamond.ac.uk>

--- a/org.eclipse.scanning.event.ui/plugin.xml
+++ b/org.eclipse.scanning.event.ui/plugin.xml
@@ -48,5 +48,9 @@
             name="Command Server Configuration">
       </page>
    </extension>
+   
+   <extension point="org.eclipse.scanning.api.resultsHandler">
+      <resultsHandler class="org.eclipse.scanning.event.ui.view.DefaultScanResultsHandler"/>
+   </extension>
 
 </plugin>
