--- a/uk.ac.gda.devices.vgscienta/build.properties
+++ b/uk.ac.gda.devices.vgscienta/build.properties
@@ -2,8 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml,\
-               icons/
+               plugin.xml
 javacDefaultEncoding.. = UTF-8
 javacProjectSettings=true
 jre.compilation.profile = JavaSE-1.8
