DAQ-596 Add JMH Benchmarking to uk.ac.gda.core.test and example SerializerBenchmark
This is a initial approach to make JMH work in GDA.

- Adds the required jars to the project /jars folder including source.
- Creates a new /benchmarks folder in the project to hold benchmarks 
- Marks /benchmarks as a source folder but excludes it from the build
  this is so that eclispe will compile the source in /benchmarks.
- Adds an simple example benchmark so show it works.
- Adds new targets to the releng.ant file to build and run the
  benchmarks

Change-Id: I27419e8404c4f55241dfa65e961fd9aaf040533b

--- a/uk.ac.gda.core.test/.classpath
+++ b/uk.ac.gda.core.test/.classpath
@@ -3,6 +3,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="benchmarks"/>
 	<classpathentry kind="lib" path="jars/Test1.jar"/>
+	<classpathentry kind="lib" path="jars/commons-math3-3.2.jar" sourcepath="jars/commons-math3-3.2-sources.jar"/>
+	<classpathentry kind="lib" path="jars/jmh-core-1.19.jar" sourcepath="jars/jmh-core-1.19-sources.jar"/>
+	<classpathentry kind="lib" path="jars/jmh-generator-annprocess-1.19.jar" sourcepath="jars/jmh-generator-annprocess-1.19-sources.jar"/>
+	<classpathentry kind="lib" path="jars/jopt-simple-4.6.jar" sourcepath="jars/jopt-simple-4.6-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
