--- a/uk.ac.gda.core.test/build.properties
+++ b/uk.ac.gda.core.test/build.properties
@@ -5,3 +5,4 @@ bin.includes = META-INF/,\
 javacDefaultEncoding.. = UTF-8
 javacProjectSettings = true
 jre.compilation.profile = JavaSE-1.8
+src.excludes = benchmarks/
